--- a/city-register/pom.xml
+++ b/city-register/pom.xml
@@ -89,6 +89,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <outputDirectory>c:/Tools/apache-tomcat-9.0.19/webapps</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
