Урок 111. Практика работы с Hibernate

--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -20,8 +20,13 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.4.4.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.6</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
